[tool.poetry]
name = "python-games-with-pygame"
version = "0.1.0"
description = "Games made with pygame"
authors = ["Allan Ramogo <amramogo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
